add scroll bar and delete discuss

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -107,6 +107,11 @@ background-color: black  ;
 	//opacity :0.75
 }
 
+.global-background-color2{  
+	background-color: #eeeeee;
+	//opacity :0.75
+}
+
 .ptt-style{
 	background-color: black  ;
 	color: #DBA901;
