--- a/app/views/discusses/new_discuss_ok.js.erb
+++ b/app/views/discusses/new_discuss_ok.js.erb
@@ -1,1 +1,1 @@
-$("#result").load("/discusses/list_by_course?ct_id=<%=@ct_id%>");
+$("#discuss").load("/discusses/list_by_course?ct_id=<%=@ct_id%>");
