--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 				<% if current_user && TopManager.find_by_user_id(current_user.id) %>
 				<li><a href="/reviews">心得列表</a></li>
 				<% end %>
-				<li><a href="/courses/simulation">課程地圖</a></li>
+				<li><a href="/courses/simulation">模擬排課</a></li>
       </ul>
 			
 			<ul class="nav navbar-nav navbar-right">
