--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 <%= render 'layouts/header' %>
 <!-- layouts/header end -->
 <% if params[:controller]!="main" %>
-	<% render 'layouts/sidebar' %>
+	<%= render 'layouts/sidebar' %>
 <% end %>
 
 
