--- a/app/views/user/_this_semester.html.erb
+++ b/app/views/user/_this_semester.html.erb
@@ -21,6 +21,9 @@
 			<%=link_to "/courses/simulation", class:"btn btn-primary" do %>
 				<%=fa_icon "plus" %>新增課程
 			<% end %>
+			<%=link_to "/user/import_course", class:"btn btn-primary" do %>
+				<%=fa_icon "upload" %>匯入課程
+			<% end %>
 		</div>
 	</div>
 	<br>
