--- a/app/views/courses/course_lists.html.erb
+++ b/app/views/courses/course_lists.html.erb
@@ -1,12 +1,10 @@
 
-
-
 <table class="table table-hover table-bordered" id="course_table" >
 
 
 
-<tr>
-<th class="col-md-1">評價
+<tr class="row">
+<th class="col-md-1">學期
 <% select_tag("sort_by", options_for_select([['綜合','all'],['涼度','cold'],['甜度','sweety'],['硬度','hardness']]),  :style=>"height :25px;width:60px; ", :onchange=>"reorder($(this))") %>
 </th>
 <th class="col-md-2">系所/摘要</th>
@@ -14,29 +12,18 @@
 
 <th class="col-md-2">課名</th>
 <th class="col-md-1">老師</th>
-<th class="col-md-3">備註</th>
+<th class="col-md-4">備註</th>
 <th class="col-md-1">時間</th>
 <th class="col-md-1">學分</th>
 <!--<th class="col-md-1"></th>-->
 </tr>
 
-	<% if @cd_all %>
+	<% if !@cd_all.empty? %>
+		<%=@cd_all.count%>
 		<% @cd_all.each do |cd,course,teacher| %>
-				<% ctrs=cd.course_teachership.course_teacher_ratings %>
-				<% ctr_cold=ctrs.select{|ctr| ctr.rating_type=="cold"}[0] %>
-				<% ctr_sweety=ctrs.select{|ctr| ctr.rating_type=="sweety"}[0] %>
-				<% ctr_hardness=ctrs.select{|ctr| ctr.rating_type=="hardness"}[0] %>
-				<% ctr_all_avg = (ctr_cold.avg_score*ctr_cold.total_rating_counts+ctr_sweety.avg_score*ctr_sweety.total_rating_counts+ctr_hardness.avg_score*ctr_hardness.total_rating_counts)/ctrs.sum(:total_rating_counts) %>
-				<tr id="<%=cd.id%>" class="clickable-row clickable-hover" href="<%=course_path(course, :tid=>teacher.id)%>">
+				<tr id="<%=cd.id%>" class="row clickable-row clickable-hover" href="<%=course_path(course, :tid=>teacher.id)%>">
 					<td>
-						<p id="rating_all" class="rating all">
-						<%if !ctr_all_avg.nan? %>
-						<%= ctr_all_avg.round(1) %>
-						<% end %>
-						</p>
-						<p id="rating_cold" class="rating cold hidden"><%= ctr_cold.avg_score.round(1) %></p>
-						<p id="rating_sweety" class="rating sweety hidden"><%= ctr_sweety.avg_score.round(1) %></p>
-						<p id="rating_hardness" class="rating hardness hidden"><%= ctr_hardness.avg_score.round(1) %></p>
+						<%=cd.semester.name%>
 					</td>
 					<td>
 						<%=course.department.ch_name%>
@@ -54,7 +41,7 @@
 				</tr>
 		<% end %>
 	<% else %>
-		<tr class="row"><td colspan="8"><h4>查無結果!</h4></td></tr>
+		<tr class="row"><td colspan="7" class="col-md-12"><h4>查無結果!</h4></td></tr>
 	<% end %>
 </table>
 
@@ -63,8 +50,11 @@
 <script>
 $(document).ready(function($) {
 	$(".clickable-row").click(function() {
-				window.document.location = $(this).attr("href");
+		window.document.location = $(this).attr("href");
+		//window.open($(this).attr("href"));
 	});
+
+	//alert("<%=j session[:saved_query].to_s.html_safe%>");
 });
 
 function reorder(obj){
@@ -104,9 +94,33 @@ $('#page-selection').bootpag({
 		page: <%=params[:page]%>,
 		<% end %>
 		maxVisible: 10
-	}).on("page", function(event, /* page number here */ num){
-		$("#search_result").load("/courses/list_all_courses?page="+num);
-});
+	}).on("page", function(event, num){
+		<% case @table_type %>
+		<% when "all" %>
+			$("#search_result").load("/courses/list_all_courses?page="+num);
+		<% when "search_by_dept" %>
+			$("#search_result").load(
+				"/courses/search_by_dept",
+				{	view_type: '<%=@view_type%>',
+					dept_id : '<%=session[:saved_query][:dept_id]%>',
+					sem_id : '<%=session[:saved_query][:sem_id]%>',
+					page : num
+				}
+			);
+		<% else %>
+			$("#search_result").load(
+			"/courses/search_by_keyword",
+			{ view_type : "<%=@view_type%>",
+				search_term: '<%=session[:saved_query][:term]%>',
+				search_type: '<%=session[:saved_query][:search_type]%>',
+				sem_id :'<%=session[:saved_query][:sem_id]%>',
+				dept_id : '<%=session[:saved_query][:dept_id]%>',
+				degree_id : '<%=session[:saved_query][:degree]%>',
+				page : num
+			}
+		);
+		<% end %>
+	});
 </script>
 
 
