--- a/app/views/user/import_course.html.erb
+++ b/app/views/user/import_course.html.erb
@@ -14,7 +14,7 @@
 
 
 
-<%= form_tag '/user/add_course', :role=>"form", :remote=>"true" do %>
+<%= form_tag '/user/add_course', :role=>"form" do %>
 <%= text_area "course","score" , class:"form-control"  ,rows:"5" %>
 <%= submit_tag "送出", :class=>"btn btn-primary" %>
 <% end %>
