--- a/app/views/user/add_course.js.erb
+++ b/app/views/user/add_course.js.erb
@@ -1,2 +1,3 @@
-alert("匯入成功! 共新增<%=@success_added%>門課 (<%=@has_added%>)重複");
+alert("匯入完成! 共新增 <%=@success_added%> 門課 重複:<%=@has_added%> 失敗:<%=@fail_added%>");
 
+window.document.location("/user/special_list");
