--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -38,7 +38,7 @@
 		</div>
 
 		<div class="row">
-			<div id="tc" class="container" style="">
+			<div id="tc" class="well" style="">
 			</div>
 			<div id="compare" class="well bs-callout" style="">
 			</div>
