--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,15 +1,21 @@
 <script>
-
-<% if session[:saved_query].empty? %>
-	//$("#search_result").load("/courses/list_all_courses?page=1");
-<% end %>
-</script>		
+	$(document).ready(function(){
+	
+		$("#filter").keyup(function(){
+			$("#course_table tr:not(:visible)").show();
+			$("#course_table tr:not(:first, :contains("+$("#filter").val()+"))").hide();
+			
+		});
+	});
+</script>
 <%= render :partial=>"search_js" %>
 
 <div class="form-inline" ><!--role="form"-->
 	<div class="row">
-
-		<div class="form-group col-sm-2  col-sm-offset-1">
+		<div class="form-group col-sm-1">
+		<label class="pull-right" style="margin-top:6px;">By 系所</label>
+		</div>
+		<div class="form-group col-sm-2  ">
 			
 			<div class="input-group">
 				<!--<span class="input-group-addon">
@@ -58,7 +64,9 @@
 				</div>	<!-- /btn-group -->
 			</div>	<!-- /input-group --> 
 		</div>	<!-- /form-group -->
-		
+		<div class="form-group col-sm-3 ">
+			<input type="text" class="form-control" id="filter" placeholder="過濾...">
+		</div>
 		<!--<div class="form-group col-sm-3 ">
 			<div class="input-group">
 				
@@ -79,17 +87,20 @@
 				</span>
 
 			</div>
-		</div>
+		</div>-->
 		<div class="col-md-1">
 		<span class="glyphicon glyphicon-question-sign clickable-hover text-right" style="color:green !important; "onclick="show_tip('search_tips')"></span>
-		</div>-->
+		</div>
 	</div><!-- /row -->
 	
 	
 </div>
 <br>
 <div class="row">
-			<div class="form-group col-sm-4 col-md-offset-4">
+	<div class="form-group col-sm-1 col-md-offset-3">
+		<label class="pull-right" style="margin-top:6px;">By 關鍵字</label>
+	</div>
+			<div class="form-group col-sm-4 ">
 			<div class="input-group">
 				
 				<div class="input-group-btn">
