--- a/app/views/courses/user_schedule.html.erb
+++ b/app/views/courses/user_schedule.html.erb
@@ -39,7 +39,9 @@
 		</div>
 		
 <script>
+
 $(document).ready(function() {
+	$('#small_timetable').html('<%=j render :partial=>'small_timetable'%>') ; // for small timetable
 	add_time_slot(<%=@cd_jsons.to_s.html_safe%>);
 	var rows = $('.schd-slot-empty');//.not(':first');
 	rows.on('click', function(e) {    
@@ -48,6 +50,7 @@ $(document).ready(function() {
 		row.addClass("schd-grid-selected");
 		
 	});
+	
 });
 function add_time_slot(courses){
 	for(var i = 0 ; i < courses.length ; i++){
@@ -58,12 +61,22 @@ function add_time_slot(courses){
 			var day=timearr[j][0];
 			for(var k = 1 ; k < timearr[j].length ; k++){
 				var row_id="#day_"+day+"_time_"+timearr[j][k];
-				$(row_id).removeClass("schd-slot-empty");
-				$(row_id).addClass(courses[i].class);
-				//$(row_id).css("background-color",courses[i].color);
-				//$(row_id).addClass("success");
-				$(row_id).text(courses[i].name);
-				$(row_id).popover({
+				var small_row_id = row_id+"_sm" ;
+								
+				$(small_row_id).removeClass("schd-slot-empty");
+				$(small_row_id).addClass(courses[i].class);
+				$(small_row_id).text(courses[i].name[1]);
+				$(small_row_id).popover({ 
+					content: "課程: "+courses[i].name+" 教室: "+courses[i].room,
+					placement:"auto",
+					trigger : "hover",
+					container :"body"
+				});
+				
+				$(row_id).removeClass("schd-slot-empty"); // remove old color
+				$(row_id).addClass(courses[i].class); //add color
+				$(row_id).text(courses[i].name);//add name
+				$(row_id).popover({ // hover detail info
 					content:"教室:"+courses[i].room,
 					//delay: { show: 500, hide: 100 },
 					placement:"auto",
