--- a/app/views/courses/_small_timetable.html.erb
+++ b/app/views/courses/_small_timetable.html.erb
@@ -11,7 +11,7 @@
 	<tr>
 		<td><%=t%></td>
 		
-		<%for i in 1..(days.size-1) do%>
+		<%for i in 1..(days.size) do%>
 		<td id="day_<%=i%>_time_<%=t%>_sm"></td>
 		<% end 	%>
 	</tr>
