--- a/app/views/courses/_small_timetable.html.erb
+++ b/app/views/courses/_small_timetable.html.erb
@@ -12,7 +12,7 @@
 		<td><%=t%></td>
 		
 		<%for i in 1..(days.size) do%>
-		<td id="day_<%=i%>_time_<%=t%>_sm"></td>
+		<td id="day_<%=i%>_time_<%=t%>_hsm"></td>
 		<% end 	%>
 	</tr>
 	<% end %>
